--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -47,22 +47,7 @@
     "message": "Application de Bureau",
     "description": "Libellé pour l'option application de bureau"
   },
-  "feedbackText": {
-    "message": "Nous apprécions vos commentaires ! Pour les bugs ou suggestions, contactez-nous à",
-    "description": "Message de retour d'information dans le pied de page"
-  },
-  "feedbackThanks": {
-    "message": "Merci de nous aider à améliorer !",
-    "description": "Message de remerciement dans le pied de page"
-  },
-  "photoBy": {
-    "message": "Photo de",
-    "description": "Texte de crédit photo"
-  },
-  "photoOn": {
-    "message": "sur",
-    "description": "Source de crédit photo"
-  },
+
   "privacyPolicy": {
     "message": "Politique de Confidentialité",
     "description": "Texte du lien de politique de confidentialité"
@@ -142,5 +127,101 @@
   "howWeUseInfoOutro": {
     "message": "Nous n'utilisons pas ces informations à d'autres fins, telles que le suivi, le profilage ou la publicité.",
     "description": "Conclusion de l'utilisation des informations"
+  },
+  "optionsSaved": {
+    "message": "Préférences enregistrées",
+    "description": "Message de confirmation affiché lorsque les préférences sont enregistrées"
+  },
+  "back": {
+    "message": "Retour",
+    "description": "Texte pour le bouton de retour"
+  },
+  "textSelectionHeader": {
+    "message": "Sélection de Texte",
+    "description": "En-tête de la section Sélection de Texte"
+  },
+  "thirdPartyServicesHeader": {
+    "message": "Services Tiers",
+    "description": "En-tête de la section Services Tiers"
+  },
+  "dataSecurityHeader": {
+    "message": "Sécurité des Données",
+    "description": "En-tête de la section Sécurité des Données"
+  },
+  "changesHeader": {
+    "message": "Modifications de Cette Politique",
+    "description": "En-tête de la section Modifications"
+  },
+  "contactHeader": {
+    "message": "Nous Contacter",
+    "description": "En-tête de la section Nous Contacter"
+  },
+  "privacyHeaderDesc": {
+    "message": "Comment Music Services Search respecte et protège votre vie privée",
+    "description": "Description de l'en-tête de la politique de confidentialité"
+  },
+  "textSelectionText": {
+    "message": "Lorsque vous sélectionnez du texte et utilisez notre menu contextuel pour effectuer une recherche, le texte sélectionné est traité uniquement pour construire une URL de recherche pour votre service musical choisi. Ce texte sélectionné n'est pas stocké par notre extension et n'est utilisé que pour l'opération de recherche immédiate.",
+    "description": "Explication sur la sélection de texte dans la politique de confidentialité"
+  },
+  "textSelectionExample": {
+    "message": "Exemple : Lorsque vous sélectionnez \"Daft Punk\" et recherchez avec Spotify, nous ouvrons simplement : https://open.spotify.com/search/Daft%20Punk",
+    "description": "Exemple de sélection de texte dans la politique"
+  },
+  "thirdPartyText": {
+    "message": "Lorsque vous effectuez une recherche avec notre extension, vous serez dirigé vers l'un des services tiers suivants :",
+    "description": "Introduction aux services tiers"
+  },
+  "spotifyDesc": {
+    "message": "Spotify - Service de streaming musical",
+    "description": "Description de Spotify"
+  },
+  "youtubeDesc": {
+    "message": "YouTube - Plateforme de partage vidéo",
+    "description": "Description de YouTube"
+  },
+  "youtubeMusicDesc": {
+    "message": "YouTube Music - Service de streaming musical de Google",
+    "description": "Description de YouTube Music"
+  },
+  "bandcampDesc": {
+    "message": "Bandcamp - Plateforme musicale en ligne",
+    "description": "Description de Bandcamp"
+  },
+  "thirdPartyNotice": {
+    "message": "Veuillez noter que ces services tiers ont leurs propres politiques de confidentialité et conditions de service. Nous vous encourageons à consulter leurs politiques car nous n'avons aucun contrôle sur la façon dont ils collectent ou traitent vos informations.",
+    "description": "Avis sur les politiques des services tiers"
+  },
+  "dataSecurityText": {
+    "message": "Étant donné que toutes les données sont stockées localement sur votre appareil, la sécurité de vos informations est protégée par les mesures de sécurité de votre navigateur. Nous ne collectons, ne transmettons ni ne stockons aucune de vos informations sur des serveurs distants.",
+    "description": "Explication de la sécurité des données"
+  },
+  "dataSecurityCallout": {
+    "message": "Vos données restent sur votre appareil — Nous croyons en la confidentialité par conception. Notre extension fonctionne sans aucun serveur de collecte de données.",
+    "description": "Message de sécurité des données"
+  },
+  "zeroDataApproach": {
+    "message": "Nous avons conçu Music Services Search avec une approche \"zéro données\". Vos préférences sont enregistrées localement dans votre navigateur, pas dans le cloud.",
+    "description": "Explication de l'approche zéro données"
+  },
+  "changesText": {
+    "message": "Nous pouvons mettre à jour notre Politique de Confidentialité de temps à autre. Nous vous informerons de tout changement en mettant à jour la nouvelle Politique de Confidentialité sur cette page. Nous vous conseillons de consulter périodiquement cette Politique de Confidentialité pour tout changement.",
+    "description": "Texte sur les changements de politique"
+  },
+  "contactText": {
+    "message": "Si vous avez des questions sur cette Politique de Confidentialité ou besoin d'aide avec l'extension, veuillez :",
+    "description": "Texte d'introduction du contact"
+  },
+  "submitIssue": {
+    "message": "Soumettre un problème sur GitHub",
+    "description": "Texte pour soumettre un problème"
+  },
+  "feedbackHelp": {
+    "message": "Vos commentaires nous aident à améliorer Music Services Search pour tous. Merci de prendre le temps de nous contacter !",
+    "description": "Remerciement pour les commentaires"
+  },
+  "copyrightText": {
+    "message": "Music Services Search © 2025",
+    "description": "Texte de copyright"
   }
 }
